--- a/src/view/TelaPrincipal.form
+++ b/src/view/TelaPrincipal.form
@@ -32,12 +32,12 @@
               <text value="MESA"/>
             </properties>
           </component>
-          <component id="d2f5c" class="javax.swing.JButton" binding="button3" default-binding="true">
+          <component id="d2f5c" class="javax.swing.JButton" binding="MINHACONTAButton" default-binding="true">
             <constraints>
               <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="MINHA CONTA"/>
             </properties>
           </component>
           <component id="6ab22" class="javax.swing.JButton" binding="button4" default-binding="true">
@@ -48,12 +48,12 @@
               <text value="Button"/>
             </properties>
           </component>
-          <component id="1c90c" class="javax.swing.JButton" binding="button5" default-binding="true">
+          <component id="1c90c" class="javax.swing.JButton" binding="sairButton" default-binding="true">
             <constraints>
               <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Button"/>
+              <text value="Sair"/>
             </properties>
           </component>
           <component id="62993" class="javax.swing.JButton" binding="button6" default-binding="true">
